# TTS-backend

./: .coveragerc  .gitignore  .pylintrc  README.md  extracted_projects.json  filter_projects.py  instructions.md  manage.py  projects.json  pyproject.toml  pytest.ini  requirements.txt  run_import_projects.sh  schema.sql  startup.sh  tasks.py  worksites.json
.github/workflows/: azure-deploymwnt-using-pip_tts-app.yml  build_deploy.yml  build_main.yml  ci-main.yml  ci-production.yml  ci-uat.yml  deploy_main.yml  main_tts-app.yml  production_tts-app-prod.yml  risksurvey_tts-app.yml  uat_tts-app-uat.yml
TTS/: production.py  settings.py  urls.py  wsgi.py
TTS/templates/: index.html
api/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
api/middleware/: access_token_middleware.py
api/migrations/: 0001_initial.py  0002_alter_risksurvey_worksite.py  0002_remove_survey_title_survey_scaffold_type_survey_task_and_more.py  0002_risknote_risk_type.py  0003_rename_risksurvey_survey_and_more.py  0003_risknote_images.py  0004_account_accountsurvey.py  0004_rename_survey_risknote_survey_and_more.py  0005_alter_account_user_id.py  0005_remove_risknote_is_not_relevant_and_more.py  0006_alter_account_user_id.py  0006_alter_survey_created_at.py  0007_remove_project_project_group_and_more.py  0007_risknote_status.py  0008_alter_account_user_id_alter_survey_scaffold_type_and_more.py  (+15 more)
testapp/: views.py
tts/: asgi.py  middleware.py  production.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
utils/: key_vault.py
(+27 files in other folders)
